--- a/src/Components/Components-style/Header.scss
+++ b/src/Components/Components-style/Header.scss
@@ -4,7 +4,8 @@ section.header {
     justify-content: center;
     background-color: #007bff;
     height: fit-content;
-    position: fixed;
+    box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
+    /* position: fixed; */
 
 }
 
@@ -17,17 +18,6 @@ header {
     color: white;
     max-width: 1260px;
     width: 100%;
-}
-
-nav a {
-    margin: 0 15px;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-}
-
-.fundraise-btn {
-    border: 3px solid white;
-    padding: 3px 12px;
-    border-radius: 10px;
+    z-index: 10;
+    // box-shadow: 0px 4px 20px -5px rgba(0, 0, 0, 0.37);
 }
