--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -20,7 +20,7 @@ button {
   color: v.$black;
   padding: 3px 7px;
   font-size: 16px;
-  border: 2px solid;
+  border: 2px solid #a1a1a1;
   cursor: pointer;
 }
 
