Donations visualization on HomePage

--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+a {
+  color: v.$black;
+  text-decoration: none;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
