--- a/src/Components/Components-style/ProjectItem.scss
+++ b/src/Components/Components-style/ProjectItem.scss
@@ -1,60 +1,81 @@
 @use '../../assets/style/var.scss' as v;
 
-.project-item-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+a {
     width: 28%;
     min-width: 300px;
-    box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
-    padding: 0 0 15px 0px;
-    border-radius: 10px;
-    margin: 20px;
+    transition: all 0.2s ease-in-out;
+    padding: 0;
+    margin: 0;
 
-    .amount-raised {
-        font-weight: 900;
-        padding-bottom: 30px;
-    }
+    .project-item-card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 28%;
+        min-width: 300px;
+        box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
+        padding: 0 0 15px 0px;
+        border-radius: 10px;
+        // margin: 20px;
 
-
-    .project-card-image-holder {
-        position: relative;
-        height: 200px;
-        width: 100%;
-        overflow: hidden;
-
-        .project-card-image {
-            // max-width: 300px;
-            border-radius: 10px 10px 0 0;
-            object-fit: cover;
-            object-position: center center;
-            width: 100%;
-            height: 200px;
-
+        .amount-raised {
+            font-weight: 900;
+            padding-bottom: 30px;
         }
 
-        .project-card-title-holder {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: absolute;
-            top: 0;
+
+
+
+        .project-card-image-holder {
+            position: relative;
+            height: 200px;
             width: 100%;
-            height: 100%;
-            background-color: #57575775;
-            border-radius: 10px 10px 0 0;
+            overflow: hidden;
 
+            .project-card-image {
+                // max-width: 300px;
+                border-radius: 10px 10px 0 0;
+                object-fit: cover;
+                object-position: center center;
+                width: inherit;
+                height: inherit;
 
-            h2.project-title {
-                color: v.$white;
             }
 
+            .project-card-title-holder {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background-color: #57575775;
+                border-radius: 10px 10px 0 0;
+                padding: 20px;
+                text-align: center;
+
+
+                h2.project-title {
+                    color: v.$white;
+                }
+
+            }
         }
+
     }
 
 
 
 
+
+
+
+
+}
+
+a:hover {
+    transform: scale(1.1);
 
 }
