--- a/src/Components/Components-style/ProjectsList.scss
+++ b/src/Components/Components-style/ProjectsList.scss
@@ -1,9 +1,10 @@
 .projects-list {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    row-gap: 30px;
     align-items: center;
     flex-wrap: wrap;
-
     width: 100%;
+    margin-top: 50px;
 
 }
