--- a/src/Components/Components-style/DonationsLatestAllItem.scss
+++ b/src/Components/Components-style/DonationsLatestAllItem.scss
@@ -1,17 +1,34 @@
-.donation-item-card {
-    margin-top: 10px;
-    border-bottom: 1px solid black;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    border: 1px solid black;
-}
+    .donation-item-card {
+        margin-top: 10px;
+        display: flex;
+        justify-content: space-between;
+        // flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 10px 20px 10px 20px;
+        row-gap: 5px;
+        box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
+        transition: all 0.2s ease-in-out;
 
-.donation-progress-bar {
-    width: 200px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
 
-}
+        .donation-item-texts {
+            display: flex;
+            justify-content: flex-start;
+            align-items: flex-start;
+            flex-direction: column;
+            padding: 5px;
+        }
+    }
+
+    .donation-progress-bar {
+        min-width: 150px;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+    }
+
+
+
+    .donation-item-card:hover {
+        transform: scale(1.1);
+    }
