--- a/src/Components/Components-style/ProgressBar.scss
+++ b/src/Components/Components-style/ProgressBar.scss
@@ -6,9 +6,20 @@
     justify-content: center;
     align-items: center;
 
+
+
     .progress-bar {
         width: 100%;
         padding: 20px 20px 5px 20px;
+
+        .progress-bar-percent {
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+
+
 
     }
 
@@ -26,4 +37,41 @@
             background-color: v.$green;
         }
     }
+}
+
+.donation-progress-bar {
+    width: 150px;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+
+    .progress-bar {
+
+
+        width: 100%;
+        height: 100%;
+        padding: 5px 5px 5px 5px;
+        position: relative;
+
+        .progress-bar-empty {
+            height: 20px;
+        }
+
+        .progress-bar-percent {
+            position: absolute;
+            padding: 7px 5px 5px 5px;
+            font-size: 14px;
+            color: white;
+            top: 0px;
+            z-index: 5;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+
+    }
+
 }
