--- a/src/Components/Components-style/CreateForm.scss
+++ b/src/Components/Components-style/CreateForm.scss
@@ -1,7 +1,75 @@
+@use '../../assets/style/var.scss' as v;
+
 .create-form {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     gap: 20px;
     padding: 20px;
+    width: 60%;
+
+    input {
+        padding: 10px 30px;
+        border-radius: 7px;
+        border: 2px solid black;
+        font-size: 16px;
+        width: 100%;
+        transition: all 0.1s ease-in-out;
+        text-align: center;
+
+        &[type=file]::file-selector-text {
+            color: blue;
+
+        }
+
+        &::file-selector-button {
+            font-size: 16px;
+            padding: 5px 5px;
+            background-color: transparent;
+            border-radius: 7px;
+
+            transition: all 0.2s ease-in-out;
+        }
+
+        &:focus {
+            background-color: #007bff05;
+            transform: scale(1.02);
+            outline: 7px ridge v.$yellow;
+        }
+
+    }
+
+
+
+
+    textarea {
+        padding: 10px 30px;
+        border-radius: 7px;
+        border: 2px solid black;
+        font-size: 16px;
+        width: 100%;
+        transition: all 0.1s ease-in-out;
+        text-align: center;
+
+        &:focus {
+            background-color: #007bff05;
+            transform: scale(1.02);
+            outline: 7px ridge v.$yellow;
+        }
+
+    }
+
+
+    button {
+        margin-top: 15px;
+        font-size: 18px;
+        padding: 10px 30px;
+        width: 100%;
+        transition: all 0.2s ease-in-out;
+    }
+
+    button:hover {
+        transform: scale(1.1);
+
+    }
 }
