--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -1,6 +1,8 @@
 @use "./var.scss" as v;
 @use '../../Components/Components-style/LoginForm.scss';
 @use '../../Components/Components-style/CreateForm.scss';
+@use '../../Components/Components-style/UserNavMenu.scss';
+
 
 * {
   padding: 0;
