fetching individual project

--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -2,6 +2,7 @@
 @use '../../Components/Components-style/LoginForm.scss';
 @use '../../Components/Components-style/CreateForm.scss';
 @use '../../Components/Components-style/UserNavMenu.scss';
+@use '../../Components/Components-style/Project.scss';
 
 
 * {
