--- a/src/Components/Components-style/Project.scss
+++ b/src/Components/Components-style/Project.scss
@@ -3,20 +3,52 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
+
+    .project-image-container {
+        width: 110%;
+        height: 500px;
+        margin-bottom: 50px;
+        overflow-x: hidden;
+
+        display: flex;
+        justify-content: center;
+
+        img {
+            border-radius: 10px;
+            object-fit: cover;
+            object-position: center center;
+            width: inherit;
+            height: inherit;
+        }
+
+    }
+
+
 
     .project-details {
         display: flex;
         justify-content: space-between;
         align-items: flex-start;
-        gap: 50px;
+        gap: 70px;
 
         .project-info {
-            width: 70%;
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            row-gap: 30px;
 
         }
 
         .donations {
-            width: 30%;
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            row-gap: 30px;
         }
     }
 }
