--- a/src/Components/Components-style/DonationsLatestAllItem.scss
+++ b/src/Components/Components-style/DonationsLatestAllItem.scss
@@ -1,34 +1,43 @@
-    .donation-item-card {
-        margin-top: 10px;
-        display: flex;
-        justify-content: space-between;
-        // flex-direction: column;
-        align-items: center;
-        width: 100%;
-        padding: 10px 20px 10px 20px;
-        row-gap: 5px;
-        box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
-        transition: all 0.2s ease-in-out;
+  @use '../../assets/style/var.scss' as v;
+
+  .donation-item-card {
+      margin-top: 10px;
+      display: flex;
+      justify-content: space-between;
+      // flex-direction: column;
+      align-items: center;
+      width: 100%;
+      padding: 10px 20px 10px 20px;
+      row-gap: 5px;
+      background-color: v.$grey-bg;
+      border-radius: 5px;
+      box-shadow: 3px 3px 10px -5px rgba(0, 0, 0, 0.37);
+      transition: all 0.2s ease-in-out;
+
+      .donation-item-date {
+          color: v.$grey-text;
+          margin-bottom: 10px;
+      }
 
 
-        .donation-item-texts {
-            display: flex;
-            justify-content: flex-start;
-            align-items: flex-start;
-            flex-direction: column;
-            padding: 5px;
-        }
-    }
+      .donation-item-texts {
+          display: flex;
+          justify-content: flex-start;
+          align-items: flex-start;
+          flex-direction: column;
+          padding: 5px;
+      }
+  }
 
-    .donation-progress-bar {
-        min-width: 150px;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
+  .donation-progress-bar {
+      min-width: 150px;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+  }
 
 
 
-    .donation-item-card:hover {
-        transform: scale(1.1);
-    }
+  .donation-item-card:hover {
+      transform: scale(1.1);
+  }
