--- a/src/Components/Components-style/Project.scss
+++ b/src/Components/Components-style/Project.scss
@@ -1,3 +1,5 @@
+@use '../../assets/style/var.scss' as v;
+
 .project-container {
     display: flex;
     flex-direction: column;
@@ -40,15 +42,61 @@
             align-items: flex-start;
             row-gap: 30px;
 
+            h1 {
+                text-transform: capitalize;
+            }
+
         }
 
-        .donations {
+        div.donations {
             width: 40%;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
             align-items: flex-start;
             row-gap: 30px;
+
+            .recent-donators-container {
+                width: 100%;
+            }
+
+            div.project-donations-show-all {
+                text-align: right;
+                cursor: pointer;
+            }
+
+            .progress-bar {
+                padding: 0;
+
+                &-empty {
+                    height: 12px;
+                }
+
+                .progress-bar-progress-amount {
+                    display: flex;
+                    justify-content: space-between;
+                    margin-bottom: 20px;
+                    font-size: 18px;
+                }
+
+                span.progress-bar-percent {
+                    margin-top: 10px;
+                    justify-content: flex-end;
+                    color: v.$grey-text;
+
+                }
+            }
+
+            button {
+                width: 100%;
+                height: 45px;
+                background-color: v.$yellow;
+                color: v.$white;
+                border: none;
+                text-transform: uppercase;
+                font-weight: 700;
+                letter-spacing: 1.5px;
+            }
         }
     }
 }
