--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -3,6 +3,7 @@
 @use '../../Components/Components-style/CreateForm.scss';
 @use '../../Components/Components-style/UserNavMenu.scss';
 @use '../../Components/Components-style/Project.scss';
+@use '../../Components/Components-style/DonateModal.scss';
 
 
 * {
