--- a/src/Components/Components-style/Project.scss
+++ b/src/Components/Components-style/Project.scss
@@ -91,11 +91,12 @@
                 width: 100%;
                 height: 45px;
                 background-color: v.$yellow;
-                color: v.$white;
+                color: v.$black;
                 border: none;
                 text-transform: uppercase;
                 font-weight: 700;
                 letter-spacing: 1.5px;
+                font-size: 18px;
             }
         }
     }
