--- a/src/Components/Components-style/ProjectItem.scss
+++ b/src/Components/Components-style/ProjectItem.scss
@@ -1,9 +1,9 @@
 @use '../../assets/style/var.scss' as v;
 
-.projects-list a {
+.projects-list {
     width: 28%;
     min-width: 300px;
-    transition: all 0.2s ease-in-out;
+
     padding: 0;
     margin: 0;
 
@@ -17,7 +17,8 @@
         box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
         padding: 0 0 15px 0px;
         border-radius: 10px;
-        // margin: 20px;
+        margin: 20px;
+        transition: all 0.2s ease-in-out;
 
         .amount-raised {
             font-weight: 900;
@@ -32,14 +33,15 @@
             height: 200px;
             width: 100%;
             overflow: hidden;
+            border-radius: 10px 10px 0 0;
 
             .project-card-image {
                 // max-width: 300px;
                 border-radius: 10px 10px 0 0;
-                object-fit: cover;
                 object-position: center center;
-                width: inherit;
-                height: inherit;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
 
             }
 
@@ -52,7 +54,7 @@
                 width: 100%;
                 height: 100%;
                 background-color: #57575775;
-                border-radius: 10px 10px 0 0;
+                border-radius: 10px 10px 10px 10px;
                 padding: 20px;
                 text-align: center;
 
@@ -61,6 +63,37 @@
                     color: v.$white;
                 }
 
+            }
+        }
+
+        .buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            button {
+                padding: 5px 10px 5px 10px;
+
+                &:hover {
+                    background-color: v.$grey-bg
+                }
+
+            }
+
+            button.donate-btn {
+                background-color: v.$yellow;
+                color: v.$black;
+                text-transform: uppercase;
+                padding: 7px 20px 7px 20px;
+                font-size: 18px;
+                font-weight: 700;
+                transition: all 0.3s ease-in-out;
+
+            }
+
+            button.donate-btn:hover {
+                background-color: #c69f03;
             }
         }
 
@@ -75,6 +108,6 @@
 
 }
 
-a:hover {
+.project-item-card:hover {
     transform: scale(1.1);
 }
