--- a/src/Components/Components-style/Project.scss
+++ b/src/Components/Components-style/Project.scss
@@ -33,6 +33,7 @@
         justify-content: space-between;
         align-items: flex-start;
         gap: 70px;
+        width: 100%;
 
         .project-info {
             width: 60%;
