--- a/src/Components/Components-style/UserNavMenu.scss
+++ b/src/Components/Components-style/UserNavMenu.scss
@@ -44,6 +44,10 @@
         color: v.$black;
         padding: 10px 0 10px 0;
         border-bottom: 1px solid black;
+
+        span.admin-btn {
+            color: salmon;
+        }
     }
 
     .logout {
