admin page changes

--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -4,6 +4,8 @@
 @use '../../Components/Components-style/UserNavMenu.scss';
 @use '../../Components/Components-style/Project.scss';
 @use '../../Components/Components-style/DonateModal.scss';
+@use '../../Components/Components-style/Admin.scss';
+
 
 
 * {
