--- a/src/Components/Components-style/Admin.scss
+++ b/src/Components/Components-style/Admin.scss
@@ -58,7 +58,7 @@ div.admin {
             width: 20%;
             height: 50px;
             right: 30px;
-            background-color: rgb(185, 245, 185);
+            background-color: #b9f5b9;
             color: green;
             font-size: 30px;
             border: 3px solid forestgreen;
