--- a/src/Components/Components-style/DonateModal.scss
+++ b/src/Components/Components-style/DonateModal.scss
@@ -14,14 +14,17 @@
     justify-content: center;
     align-items: center;
 
+
     &-bg {
         height: 100%;
-        width: 100%;
+        width: 150%;
         // background-color: red;
         backdrop-filter: blur(10px);
+
         position: absolute;
         z-index: 0;
         top: 0px;
+        overflow: hidden;
 
     }
 
