--- a/src/Components/Components-style/DonationsLatestAllItem.scss
+++ b/src/Components/Components-style/DonationsLatestAllItem.scss
@@ -1,18 +1,20 @@
   @use '../../assets/style/var.scss' as v;
 
   .donation-item-card {
-      margin-top: 10px;
+      margin-top: 7px;
       display: flex;
       justify-content: space-between;
       // flex-direction: column;
       align-items: center;
       width: 100%;
-      padding: 10px 20px 10px 20px;
+      padding: 10px 10px 10px 10px;
       row-gap: 5px;
       background-color: v.$grey-bg;
       border-radius: 5px;
       box-shadow: 3px 3px 10px -5px rgba(0, 0, 0, 0.37);
       transition: all 0.2s ease-in-out;
+      //   scale: 0.9;
+      font-size: 14px;
 
       .donation-item-date {
           color: v.$grey-text;
@@ -39,5 +41,5 @@
 
 
   .donation-item-card:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
   }
