--- a/src/Components/Components-style/Hero.scss
+++ b/src/Components/Components-style/Hero.scss
@@ -3,17 +3,22 @@
     justify-content: center;
     align-items: center;
     height: 80vh;
+    min-height: 350px;
     background-color: aquamarine;
+
 }
 
 .header-bin {
     background-color: aquamarine;
     height: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
     row-gap: 40px;
     font-size: 1.5em;
+    margin-top: 100px;
+
 
     button {
         font-size: 1.2em;
