--- a/src/Components/Components-style/ProjectItem.scss
+++ b/src/Components/Components-style/ProjectItem.scss
@@ -12,13 +12,45 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        width: 28%;
-        min-width: 300px;
+        width: 22%;
+        min-width: 212px;
         box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
         padding: 0 0 15px 0px;
         border-radius: 10px;
-        margin: 20px;
+        margin: 10px;
         transition: all 0.2s ease-in-out;
+        position: relative;
+
+        a {
+            width: 100%
+        }
+
+        .finished {
+            position: absolute;
+            bottom: 15px;
+            right: 0px;
+            z-index: 5;
+            width: 100%;
+            color: v.$white;
+            height: 30px;
+            font-size: 16px;
+            text-align: center;
+            overflow: hidden;
+            line-height: 20px;
+            padding: 5px;
+            background-color: v.$green;
+        }
+
+        &-description {
+            padding: 15px 15px 5px 15px;
+
+            line-height: 1.5;
+            letter-spacing: 1.1px;
+            font-weight: 500;
+            color: v.$grey-text;
+            height: 80px;
+            font-size: 14px;
+        }
 
         .amount-raised {
             font-weight: 900;
@@ -30,8 +62,9 @@
 
         .project-card-image-holder {
             position: relative;
-            height: 200px;
+            height: 120px;
             width: 100%;
+            min-width: inherit;
             overflow: hidden;
             border-radius: 10px 10px 0 0;
 
@@ -55,12 +88,18 @@
                 height: 100%;
                 background-color: #57575775;
                 border-radius: 10px 10px 10px 10px;
-                padding: 20px;
+                padding: 10px;
                 text-align: center;
 
 
                 h2.project-title {
                     color: v.$white;
+                    font-size: 16px;
+                    text-transform: capitalize;
+                    font-weight: 500;
+                    letter-spacing: 1.2px;
+                    line-height: 1.2;
+                    margin: 0px;
                 }
 
             }
@@ -70,10 +109,15 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 10px;
+            gap: 5px;
+            margin-top: 20px;
+            height: 30px;
+
 
             button {
-                padding: 5px 10px 5px 10px;
+                padding: 5px 7px 5px 7px;
+                font-size: 14px;
+
 
                 &:hover {
                     background-color: v.$grey-bg
@@ -85,8 +129,8 @@
                 background-color: v.$yellow;
                 color: v.$black;
                 text-transform: uppercase;
-                padding: 7px 20px 7px 20px;
-                font-size: 18px;
+                padding: 6px 10px 6px 10px;
+                font-size: 14px;
                 font-weight: 700;
                 transition: all 0.3s ease-in-out;
 
