--- a/src/assets/style/App.scss
+++ b/src/assets/style/App.scss
@@ -5,6 +5,7 @@
 @use '../../Components/Components-style/Project.scss';
 @use '../../Components/Components-style/DonateModal.scss';
 @use '../../Components/Components-style/Admin.scss';
+@use '../../Components/Components-style/Home.scss';
 
 
 
