--- a/src/Components/Components-style/DonateModal.scss
+++ b/src/Components/Components-style/DonateModal.scss
@@ -62,6 +62,16 @@
             padding: 10px;
         }
 
+        &.-message {
+            background-color: rgba(0, 80, 4, 0.186);
+            color: green;
+            border: 1px solid green;
+            border-radius: 3px;
+            width: 90%;
+            text-align: center;
+            padding: 10px;
+        }
+
         &-inputs {
             display: flex;
             justify-content: center;
