--- a/src/Components/Components-style/Header.scss
+++ b/src/Components/Components-style/Header.scss
@@ -6,7 +6,8 @@ section.header {
     background-color: #007bff;
     height: fit-content;
     box-shadow: 4px 4px 20px -5px rgba(0, 0, 0, 0.37);
-    /* position: fixed; */
+    position: fixed;
+    z-index: 100;
 
 }
 
