--- a/src/Components/Components-style/LoginForm.scss
+++ b/src/Components/Components-style/LoginForm.scss
@@ -39,3 +39,13 @@
 
     }
 }
+
+.message {
+    background-color: rgba(0, 80, 4, 0.186);
+    color: green;
+    border: 1px solid green;
+    border-radius: 3px;
+    width: 90%;
+    text-align: center;
+    padding: 10px;
+}
