Dixed to_review showing in the list and donation error

--- a/src/Components/Components-style/DonationsLatestAllItem.scss
+++ b/src/Components/Components-style/DonationsLatestAllItem.scss
@@ -32,10 +32,17 @@
   }
 
   .donation-progress-bar {
-      min-width: 150px;
       display: flex;
       justify-content: flex-end;
       align-items: center;
+
+      .progress-bar {
+          .progress-bar-percent {
+              font-size: 12px;
+
+          }
+
+      }
   }
 
 
