--- a/src/Components/Components-style/Hero.scss
+++ b/src/Components/Components-style/Hero.scss
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
-    min-height: 350px;
+    // height: 80vh;
+    min-height: 470px;
     // background-color: aquamarine;
 
 }
@@ -25,6 +25,7 @@
     margin-top: 50px;
     text-align: center;
     color: white;
+    min-height: 470px;
 
     h1 {
         font-size: 50px;
